Added libraries; added generation and viewing

--- a/PlaylistGenerator/app/src/main/AndroidManifest.xml
+++ b/PlaylistGenerator/app/src/main/AndroidManifest.xml
@@ -16,6 +16,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="com.spotify.sdk.android.authentication.LoginActivity"
+            android:theme="@android:style/Theme.Translucent.NoTitleBar" />
+        <activity android:name=".GenerateActivity" />
+        <activity android:name=".ViewActivity"></activity>
     </application>
 
 </manifest>
